Fixed bug in sex rule.